css/style_smartphone.less
@import "mixins.less";
@import "variables.less";

/* apply a natural box layout model to all elements */
* {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

::-moz-selection {
    background: #a07272;
    color: #fff;
    text-shadow: none;
}

::selection {
    background: #a07272;
    color: #fff;
    text-shadow: none;
}

html {
    background: none;
}

body {
    background: @base2;
    color: #5c5c5c ;
    font: normal 100% OpenSans, Cambria, Georgia, serif;
    margin: auto;
    padding: 0 1em 0 1em;
    overflow-x: hidden;
    -ms-touch-action: auto;
}

.main {
    margin: auto;
}

.mnav {
    margin: 1em auto;
    width: 100%;
}

.extend {
    display: none;
    padding: 0.35em;
    margin: 15px 0 15px 0;
    border: 3px solid #611414;
    box-shadow: 2px 2px 3px #a07272;
    .border-radius(4px);
}

#respmenu {
    display: none;
}

#adframe {
    float: right;
    padding: 5px 0 0 5px;
}

article {
    text-align: justify;
    background-image: url('assets/header-bg.png?1340357219');
    background-repeat: no-repeat;
    background-position: 50% 100%;
    padding-bottom: 0.4em;
    margin-bottom: 0.8em;
}

article ul {
    list-style-position: inside;
}

article ul li {
    padding-bottom: 10px;
}

figure {
    margin: 0 0.75em 0.75em 0;
    background: #611414;
    text-decoration: none;
    .border-radius(4px);
}

figure .fig_half {
    width: 100%;
}

figure img {
    width: 100%;
    padding: 3px;
}

figcaption {
    padding: 0.3em;
    color: #dfdfd8;
}

.isotope figure img {
    width: auto;
    padding: 0;
}

.research_article figure {
    float: left;
    width: auto;
    min-width: 200px;
}

.research_article figure img {
    float: left;
    width: auto;
}

.research_article figcaption {
    width: auto;
}

.gallery_article {
    float: left;
}

.gallery_article figure {
    float: left;
    max-width: 46%;
    margin: 1%;
}

.search_article ul {
    list-style-type: none;
    padding-left: 1em;
    text-indent: -1em;
}

.search_article li {
    padding-top: 0.2em;
    padding-bottom: 0;
}

h1 {
    font-size: 2em;
    font-weight: normal;
    text-transform: lowercase;
    word-spacing: -0.2em;
}
h1 span {
    color: #a07272;
}

footer {
    text-align: right;
    margin-bottom: 0.5em;
    font-size: 0.75em;
    font-weight: normal;
    font-style: italic;
}

a:focus {
    outline: none;
}

a, a:visited {
    color: #a07272;
}

a:hover {
    color: #611414;
}

input {
    border: 1px solid #a07272;
    .border-radius(4px);
    padding: 4px 8px 4px 8px;
}

textarea {
    border: 1px solid #a07272;
    .border-radius(4px);
}

select {
    border: 1px solid #a07272;
    .border-radius(4px);
}

